[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/FontBig.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/leveleditor/menus/CreateWorld.gd" type="Script" id=2]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=3]

[node name="CreateWorldMenu" type="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 15.0
margin_right = -20.0
margin_bottom = -15.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 43.0
margin_top = 26.0
margin_right = -44.0
margin_bottom = -25.0
custom_constants/separation = 15

[node name="Label" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1153.0
margin_bottom = 30.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][wave]Create World"
text = "Create World"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 1153.0
margin_bottom = 55.0
custom_constants/separation = 10

[node name="WorldProperties" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 1153.0
margin_bottom = 169.0
custom_constants/separation = 15

[node name="WorldName" type="HSplitContainer" parent="VBoxContainer/WorldProperties"]
margin_right = 1153.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
focus_neighbour_bottom = NodePath("../AuthorName")

[node name="Label" type="Label" parent="VBoxContainer/WorldProperties/WorldName"]
margin_top = 10.0
margin_right = 570.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "World Name:"

[node name="WorldNameEdit" type="LineEdit" parent="VBoxContainer/WorldProperties/WorldName"]
margin_left = 582.0
margin_right = 1153.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="AuthorName" type="HSplitContainer" parent="VBoxContainer/WorldProperties"]
margin_top = 57.0
margin_right = 1153.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 42 )
focus_neighbour_top = NodePath("../WorldName")
focus_neighbour_bottom = NodePath("../../CreateWorldButton")

[node name="Label" type="Label" parent="VBoxContainer/WorldProperties/AuthorName"]
margin_top = 10.0
margin_right = 570.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Author Name:"

[node name="AuthorNameEdit" type="LineEdit" parent="VBoxContainer/WorldProperties/AuthorName"]
margin_left = 582.0
margin_right = 1153.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="SpaceFiller" type="Control" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 1153.0
margin_bottom = 509.0
size_flags_vertical = 3

[node name="CreateWorldButton" type="Button" parent="VBoxContainer"]
margin_top = 524.0
margin_right = 1153.0
margin_bottom = 574.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../WorldProperties/AuthorName")
focus_neighbour_bottom = NodePath("../Back")
text = "Create World"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 589.0
margin_right = 1153.0
margin_bottom = 639.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../CreateWorldButton")
text = "Back"

[connection signal="about_to_show" from="." to="." method="_on_CreateWorldMenu_about_to_show"]
[connection signal="pressed" from="VBoxContainer/CreateWorldButton" to="." method="_on_CreateWorldButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
