[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/leveleditor/menus/CreateWorld.gd" type="Script" id=1]
[ext_resource path="res://theme/FontGiant.tres" type="DynamicFont" id=2]
[ext_resource path="res://theme/FontBig.tres" type="DynamicFont" id=3]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=4]

[node name="EditWorldMenu" type="PopupDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 15.0
margin_right = -20.0
margin_bottom = -15.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
is_edit_world_menu = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 43.0
margin_top = 26.0
margin_right = -44.0
margin_bottom = -25.0
custom_constants/separation = 15

[node name="Label" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 513.0
margin_bottom = 30.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][wave]Edit World Properties"
text = "Edit World Properties"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 513.0
margin_bottom = 55.0
custom_constants/separation = 10

[node name="WorldProperties" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 513.0
margin_bottom = 169.0
custom_constants/separation = 15

[node name="WorldName" type="HSplitContainer" parent="VBoxContainer/WorldProperties"]
margin_right = 513.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
focus_neighbour_bottom = NodePath("../AuthorName")

[node name="Label" type="Label" parent="VBoxContainer/WorldProperties/WorldName"]
margin_top = 10.0
margin_right = 250.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "World Name:"

[node name="WorldNameEdit" type="LineEdit" parent="VBoxContainer/WorldProperties/WorldName"]
margin_left = 262.0
margin_right = 513.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="AuthorName" type="HSplitContainer" parent="VBoxContainer/WorldProperties"]
margin_top = 57.0
margin_right = 513.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 42 )
focus_neighbour_top = NodePath("../WorldName")
focus_neighbour_bottom = NodePath("../../ConfirmEditProperties")

[node name="Label" type="Label" parent="VBoxContainer/WorldProperties/AuthorName"]
margin_top = 10.0
margin_right = 250.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Author Name:"

[node name="AuthorNameEdit" type="LineEdit" parent="VBoxContainer/WorldProperties/AuthorName"]
margin_left = 262.0
margin_right = 513.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="SpaceFiller" type="Control" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 513.0
margin_bottom = 334.0
size_flags_vertical = 3

[node name="ConfirmEditProperties" type="Button" parent="VBoxContainer"]
margin_top = 349.0
margin_right = 513.0
margin_bottom = 399.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../WorldProperties/AuthorName")
text = "OK"

[node name="ErrorDialog" type="PopupDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 54.0
margin_top = 30.0
margin_right = -54.0
margin_bottom = -30.0

[node name="VBoxContainer" type="VBoxContainer" parent="ErrorDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_right = -64.0
alignment = 1

[node name="Title" type="RichTextLabel" parent="ErrorDialog/VBoxContainer"]
margin_top = 67.0
margin_right = 364.0
margin_bottom = 161.0
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[shake][center]Error!"
text = "Error!"
fit_content_height = true

[node name="HSeparator2" type="HSeparator" parent="ErrorDialog/VBoxContainer"]
margin_top = 165.0
margin_right = 364.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="ErrorDialog/VBoxContainer"]
margin_top = 199.0
margin_right = 364.0
margin_bottom = 220.0
text = "Error editing user world."
align = 1
valign = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="ErrorDialog/VBoxContainer"]
margin_top = 224.0
margin_right = 364.0
margin_bottom = 254.0

[node name="ErrorEscape" type="Button" parent="ErrorDialog/VBoxContainer"]
margin_top = 258.0
margin_right = 364.0
margin_bottom = 322.0
rect_min_size = Vector2( 0, 64 )
text = "OK"

[connection signal="about_to_show" from="." to="." method="_on_CreateWorldMenu_about_to_show"]
[connection signal="text_changed" from="VBoxContainer/WorldProperties/WorldName/WorldNameEdit" to="." method="_on_WorldNameEdit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/WorldProperties/AuthorName/AuthorNameEdit" to="." method="_on_AuthorNameEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/ConfirmEditProperties" to="." method="_on_ConfirmEditProperties_pressed"]
[connection signal="about_to_show" from="ErrorDialog" to="." method="_on_ErrorDialog_about_to_show"]
[connection signal="pressed" from="ErrorDialog/VBoxContainer/ErrorEscape" to="." method="_on_ErrorEscape_pressed"]
